# xpar

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  bootstrap  common.h  configure.ac  crc32c-x86_64.S  crc32c.c  crc32c.h  jmode.c  jmode.h  platform.c  platform.h  smode.c  smode.h  trans.c  trans.h  xpar-aarch64.S  xpar-x86_64.S  xpar-x86_64.asm  xpar.1  xpar.c  yarg.h
.github/workflows/: build.yml  release.yml
contrib/: gitlog-to-changelog  xpar-torture
m4/: ax_gcc_func_attribute.m4  ax_prog_nasm.m4
